cyber-maddie/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyber-maddie
  namespace: cyber-maddie
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cyber-maddie
  template:
    metadata:
      labels:
        app: cyber-maddie
    spec:
      containers:
      - name: cyber-maddie
        image: docker.io/nibir/cyber-maddie:7fb5d86
        # image: docker.io/nibir/cyber-maddie:debug # Uncomment for debug image
        imagePullPolicy: Always
        ports:
        - containerPort: 80
