cyber-maddie/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyber-maddie
  namespace: cyber-maddie
spec:  
  selector:
    app: cyber-maddie
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: LoadBalancer
